# vivo-note-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
docs/: database.md  obsidian-recipe.md  releasing.md
skills/vivo-note/: SKILL.md
src/vivo_note_cli/: __init__.py  cli.py  db.py  exporter.py  formatters.py  html_md.py
tests/: conftest.py  test_cli.py  test_db_safety.py  test_exporter.py  test_html_md.py
