[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vivo-note-cli"
version = "0.1.0"
description = "Safe read-only exporter for vivo Office / Atomic Notes NoteSync.db"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "gobylor"}]
keywords = ["vivo", "notes", "sqlite", "markdown", "export"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/gobylor/vivo-note-cli"
Repository = "https://github.com/gobylor/vivo-note-cli"
Issues = "https://github.com/gobylor/vivo-note-cli/issues"
Changelog = "https://github.com/gobylor/vivo-note-cli/blob/main/CHANGELOG.md"

[project.scripts]
vivo-note = "vivo_note_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
